--- a/IT_Tracker/src/main/resources/application.properties
+++ b/IT_Tracker/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8083
+#DataSource Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/comp231_team6
+spring.datasource.username=jason
+#Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
