--- a/IT_Tracker/src/main/resources/application.properties
+++ b/IT_Tracker/src/main/resources/application.properties
@@ -7,7 +7,11 @@ spring.datasource.username=jason
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+server.port=8083
+#DataSource Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/comp321
+spring.datasource.username=jason
+#Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
